# ShoppingAgent

./: Dockerfile  README.md  app.py  dataset.json  env.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  tasks_and_graders.py
server/: app.py
